--- a/js_task2/Show1.html
+++ b/js_task2/Show1.html
@@ -5,18 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    span {color: blue;}
+</style>
 <script>
-    var span = document.getElementsByTagName('span');
-    span.style.visibility = "hidden";
-    span.style.color = "blue";
+    document.addEventListener("DOMContentLoaded", function() {
+        var txt = document.getElementsByClassName("txt")
+        var empty = document.getElementsByClassName("empty")
+        var count = 1;
+        for (let i=0; i<txt.length; i++) {
+            txt[i].style.visibility = "hidden";
+        }
+        var btn = document.getElementById("btn")
+        document.addEventListener("click", function() {
+            if (count%2 == 1) {
+                for (let i=0; i<txt.length; i++) {
+                    txt[i].style.visibility = "visible";
+                }
+            } else {
+                for (let i=0; i<txt.length; i++) {
+                    txt[i].style.visibility = "hidden";
+                }
+            }
+            count++;
+        }); 
+    });
 </script>
 <body>
-    <h3>다음 빈 곳에 숨은 단어? <input type="button" value="show/hide"></h3>
+    <h3>다음 빈 곳에 숨은 단어? <input type="button" value="show/hide" id="btn"></h3>
     <hr>
     <ul>
-        <li> I (<span>love</span>) you.</li>
-        <li> CSS is Cascading (<span>Style</span>) Sheet.</li>
-        <li> 응답하라 (<span>1988</span>)</li>
+        <li> I (<span class="txt">love</span>) you.</li>
+        <li> CSS is Cascading (<span class="txt">Style</span>) Sheet.</li>
+        <li> 응답하라 (<span class="txt">1988</span>)</li>
     </ul>
 </body>
 </html>
