--- a/js_task2/Show2.html
+++ b/js_task2/Show2.html
@@ -10,13 +10,15 @@
     
     var count=1;
     $(function() {
-        $("span").css("color", "blue")
+        $(".txt").css("color", "blue")
         .hide();
         $("#btn").click(function() {
             if (count%2) {
-                $("span").show();
+                $(".txt").show();
+                $(".empty").hide();
             } else {
-                $("span").hide();
+                $(".txt").hide();
+                $(".empty").show();
             }
             count++;
         });
@@ -26,9 +28,9 @@
     <h3>다음 빈 곳에 숨은 단어? <input type="button" value="show/hide" id="btn"></h3>
     <hr>
     <ul>
-        <li> I (<span>love</span>) you.</li>
-        <li> CSS is Cascading (<span>Style</span>) Sheet.</li>
-        <li> 응답하라 (<span>1988</span>)</li>
+        <li> I (<span class="txt">love</span><span class="empty">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>) you.</li>
+        <li> CSS is Cascading (<span class="txt">Style</span><span class="empty">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>) Sheet.</li>
+        <li> 응답하라 (<span class="txt">1988</span><span class="empty">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>)</li>
     </ul>
 </body>
 </html>
